--- a/media/cv-print.css
+++ b/media/cv-print.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -53,20 +48,20 @@ table {
 
 body {
 	font: normal normal 400;
-	font-size: 10pt;
-	line-height: 1.35em;
+	font-size: 80%;
+	line-height: 1.5em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
 	font-family: Verdana,sans-serif;
-	/*margin-top: 1em;
-	margin-left: 1em;*/
+	margin-top: 1em;
+	margin-left: 1em;
 }
 
 p {
 	position: relative;
-	left: 28%;
-	margin-bottom: 0.2em;
+	left: 33%;
+	margin-bottom: 1.3em;
 	margin-right: 0;
-	width: 70%;
+	width: 65%;
 }
 
 code {
@@ -74,21 +69,22 @@ code {
 	font-size: 60%;
 	/*line-height: 1em;*/
 	font-family: Menlo,monospace,sans-serif;
-	color: #ccc;
+	color: #aaa;
 }
 
 p code {
 	position: absolute;
-	left: -11%;
+    left: -20%;
+    font-size: 90%;
 }
 
 
 ul { 
 	position: relative;
-	left: 28%;
+	left: 33%;
 	width: 65%;
-	margin-bottom: 1em;
-	/*margin-top: -0.5em;*/
+	margin-bottom: 1.5em;
+	margin-top: -0.5em;
 }
 
 /*uncomment to get dashes in the list*/
@@ -123,7 +119,7 @@ h1 {
 	font-size: 3em;
 	line-height: 1em;
 	position: relative;
-	left: 28%;
+	left: 33%;
 }
 
 h1+p { 
@@ -135,27 +131,27 @@ h1+p {
 h2 {
 	font-size: 1.1em;
 	color: #a00;
-	margin-top: 2em;
+	margin-top: 3em;
 	position: relative;
-	top: 1.2em;
+	top: 1.4em;
 	text-align: right;
-	width: 18%;
+	width: 20%;
 }
 
-
 h3 {
-	font-size: 1em;
+	font-size: 1.25em;
 	line-height: 2em; 
-	color: #ccc;
 	position: relative;
-	top: 1.6em;
+    top: 1.7em;
 	text-align: right;
-	width: 18%;
+    width: 20%;
+    font-weight: bold;
+    text-align: left;
 }
 
 a {
 	color: inherit;
-	text-decoration:none
+	/*text-decoration:none*/
 }
 
 a:hover {
@@ -165,8 +161,8 @@ a:hover {
 #webaddress {
 	margin-top: 1em;
 	position: relative;
-	left: 28%;
-	color: #ccc;
+	left: 33%;
+	color: #aaa;
 	font-family: Menlo,monospace,sans-serif;
 	font-size: 80%;
 }
@@ -176,19 +172,56 @@ a:hover {
 }
 
 em {
-	font-style: normal;
-	color: #2d4e5e 
+	font-weight: bold;
+	font-style: italic;
 }
 
 strong {
 	font-weight: bold;
 }
 
-#ghbutton {
+#address {
 	display: none;
-	visibility: hidden;
 }
 
 
+h1 + p {
+    margin-top: 25px;
+}
+
+#footer, #footer + p {
+    display: none;
+}
 
 
+img {
+    margin-top: 40px;
+}
+
+footer {
+    display: none;
+}
+
+#content {
+    margin:0 auto;
+}
+
+@page {
+    size: A4;
+    margin: 11mm 17mm 17mm 17mm;
+}
+
+@media print {
+    html, body {
+        width: 210mm;
+        height: 297mm;
+    }
+
+    footer {
+        display:block;
+        bottom:0;
+        position:fixed;
+        font-size:11px;
+        text-align: center !important;
+    }
+}
