--- a/media/cv-print.css
+++ b/media/cv-print.css
@@ -1,3 +1,8 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -7,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -19,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -79,7 +84,7 @@ p code {
 }
 
 
-ul { 
+ul {
 	position: relative;
 	left: 33%;
 	width: 65%;
@@ -122,7 +127,7 @@ h1 {
 	left: 33%;
 }
 
-h1+p { 
+h1+p {
 	/*subtitle*/
 	font-style: italic;
 	font-size: 110%;
@@ -140,7 +145,7 @@ h2 {
 
 h3 {
 	font-size: 1.25em;
-	line-height: 2em; 
+	line-height: 2em;
 	position: relative;
     top: 1.7em;
 	text-align: right;
@@ -198,22 +203,18 @@ img {
     margin-top: 40px;
 }
 
- footer {
-        display:block;
-        bottom:-5mm;
-        position:fixed;
-        font-size:11px;
-        text-align: center !important;
-    }
+footer {
+    display: none;
+}
 
 #content {
     margin:0 auto;
-	margin-bottom: 50px;
+    /*margin-bottom: 60px;*/
 }
 
 @page {
     size: A4;
-    margin: 11mm 17mm 24mm 17mm;
+    margin: 11mm 17mm 17mm 17mm;
 }
 
 @media print {
@@ -222,5 +223,26 @@ img {
         height: 297mm;
     }
 
-   
+    /*
+    footer {
+        display:block;
+        bottom:0;
+        position:fixed;
+        font-size:11px;
+        text-align: center !important;
+    }
+    */
 }
+
+
+
+
+
+
+
+
+
+/*
+@media only screen and (max-width: 480px) {
+	make one column somehow...
+}*/
